test_regress/t/t_inst_misarray2_bad.out
%Error: t/t_inst_misarray2_bad.v:10:17: Illegal assignment: 'logic[16:0]$[6:0]' is not assignment compatible with 'logic[16:0]'
                                      : ... note: In instance 't'
   10 |                .i_data(fft_oQ[6:0])
      |                 ^~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
